style.css
/*  Color scheme based off http://colorhunt.co/c/4371
    #F0E9FF
    #CEA9FF
    #B346FF
    #290046
    #545454  */

@import url(https://fonts.googleapis.com/css?family=Quicksand:400,300);

@font-face {
    font-family: Lombok;
    src: url('fonts/lombok.otf');
}
/*
Solution to Safari iOS font rendering, based off:
https://css-tricks.com/forums/topic/weird-mobile-safari-font-face-problem-font-doubled-and-offset-to-the-left/
*/
@font-face {
    font-family: Lombok;
    src: url('fonts/lombok.otf');
    font-weight: bold;
}
.noselect {
    -webkit-touch-callout: none;
    /* iOS Safari */
    -webkit-user-select: none;
    /* Safari */
    -khtml-user-select: none;
    /* Konqueror HTML */
    -moz-user-select: none;
    /* Firefox */
    -ms-user-select: none;
    /* Internet Explorer/Edge */
    user-select: none;
    /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

body {
    background-color: white;
    margin: 0;
    color: white;
    font-family: 'Quicksand', sans-serif;
    font-weight: 400;
    text-align: center;
}

.logo img {
    width: 31.25rem;
    max-width: 100vw;
    height: 100vh;
}

.logo h1 {
    position: absolute;
    top: 70vh;
    width: 100%;
    color: #545454;
    text-align: center;
    font-size: 4rem;
    font-family: Lombok;
}


@media screen and (max-width: 500px) {
    .logo h1 {
        font-size: 3rem;
    }
}

.info {
    
}

.info h2 {
    display: inline-block;
}

.tabs {
    color: white;
    background-color: #b346ff;
    padding: 1px;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 60px;
    line-height: 60px;
    padding: 0;
}

.tabs nav ul {
    display: inline;
    margin: 0;
    padding: 0;
}

.tabs nav li {
    padding: 10px;
    display: inline;
}

.tabs nav a {
    color: white;
    text-decoration: none;
}

.tabs span {
    color: rgb(1, 255, 174);
    padding-top: 20px;
    padding-bottom: 20px;
}

.tabs nav {
    margin: 0;
}

.tabs h2 {
    position: absolute;
    top: 0;
    left: 60px;
    line-height: 100%;
    margin: 0;
    padding: 20px;
    font-family: Lombok;
    width: 10.365rem;
    color: white;
}

.tabs img {
    height: 60px;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
}

.tabs .hamburger {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    line-height: 100%;
    margin: 0;
    padding: 17px;
    z-index: 5;
}

@media screen and (max-width: 1124px) {
    .tabs img {
        display: none;
    }
    .tabs h2 {
        left: 0;
    }
}

@media screen and (max-width: 1034px) {
    .tabs img {
        display: initial;
    }
    .tabs h2 {
        display: none;
    }
}

@media screen and (max-width: 699px) {
    .tabs img {
        display: none;
    }
    .tabs h2 {
        display: none;
    }
}

/* IF ADDING MORE LINKS TO THE NAV THEN CHANGE THIS!!! */
@media screen and (max-width: 574px) {
    .tabs img {
        display: none;
    }
    .tabs h2 {
        display: initial;
        width: calc(100vw - 40px);
        text-align: center;
        left: 0;
    }
    .tabs nav {
        display: none;
    }
    .tabs .hamburger {
        display: initial;
    }
    body.nav-out, body.nav-out .tabs {
        margin-left: 50vw;
    }
    body.nav-out .tabs nav {
        display: initial;
        position: fixed;
        left: 0;
        top: 0;
        bottom: 0;
        width: 50vw;
        background-color: #b346ff;
        box-shadow: inset 0 0 3em black;
    }
    body.nav-out .tabs nav ul {
        display: block !important;
        margin: initial !important;
        padding: initial !important;
        list-style: none !important;
        text-align: left !important;
        margin-left: 2rem !important;
        margin-top: 1rem !important;
    }
    body.nav-out .tabs nav li {
        padding: initial !important;
        display: list-item !important;
    }
}

.top-anchor {
    position: absolute;
    bottom: 56px; /*theoretically this should be 60px but idk, the internet is weird. */
}

.content {
    background-color: #290046;
    margin: 0;
    text-align: left;
    padding: 2rem;
    line-height: 1.7rem;
}

.content a {
    color: white;
}

.info p {
    margin-top: 0;
    font-size: 1.5rem;
    line-height: 2.3rem;
}

#extlink {
    text-decoration: underline;
}

.websites-mobile div {
    margin-top: 100px;
}

.websites-desktop a {
    text-decoration: none;
}

.websites-mobile a {
    text-decoration: none;
}

.websites-desktop img {
    width: 100%;
}

.websites-mobile img {
    width: 100%;
}

#backtotop {
    position: fixed;
    bottom: 0;
    right: 25px;
    background-color: rgb(247, 150, 70);
    padding: 3px;
    text-decoration: none;
}

#warning {
    background-color: red;
    border-radius: 10px;
    font-weight: bold;
    padding: 2px;
}

#backtotop {
    position: fixed;
    bottom: 0;
    right: 25px;
    background-color: rgb(247, 150, 70);
    padding: 3px;
    text-decoration: none;
}

#backtotop a {
    text-decoration: none;
}

#quicklinks-mobile {
    display: none;
}

#quicklinks-desktop a {
    text-decoration: none;
}

table {
    width: 100%;
}

td {
    width: 50%;
    padding: 15px;
}

#left {
    text-align: right;
}

#right {
    text-align: left;
}

.websites-mobile, projects-mobile, .designs-mobile {
    display: none !important;
}

@media screen and (max-width: 750px) {
    .websites-desktop, .projects-desktop, .designs-desktop {
        display: none;
    }
    .websites-mobile, .projects-mobile, .designs-mobile {
        display: initial !important;
    }
}

.designs-desktop img {
    height: 402px;
    width: auto;
}

#skillscoder11 {
    background: url('zz-skillscoder11.svg');
    background-size: cover;
    height: 402px;
    width: 402px;
}

#skillscoder11:hover {
    background: url('zz-skillscoder11.gif');
    background-size: cover;
    height: 402px;
    width: 402px;
}

.accounts {
    text-align: center;
    background-color: #cea9ff;
    padding: 1px;
    color: #545454;
    margin-bottom: 1rem;
}

.accounts a {
    color: black;
    text-decoration: none;
}

body.contact .content {
    background-color: #cea9ff;
}

.contact-cards-container {
    width: 72%;
    margin: auto;
}


/* Pretty much taken from Pine Designs */

.contact-card {
    width: calc(96%/3/*cards per row*/
    );
    display: inline-block;
    background-color: #b346ff;
    margin: 0;
    margin-top: 0.15rem;
    margin-bottom: 0.15rem;
    height: 7rem;
    vertical-align: middle;
    line-height: 7rem;
    text-align: center;
    /*box-shadow: inset 0 0 21rem black;*/
    transition: all, 0.5s;
}

.contact-card:hover {
    background-color: #fff;
    text-decoration: none;
    box-shadow: none;
    color: #000;
}

.contact-card:hover i.fa,
.contact-card:hover img {
    display: none;
}

.contact-card span {
    display: none;
}

.contact-card:hover span {
    display: inherit;
}

.contact-card img, .contact-card i.fa {
    max-width: 50%;
    max-height: 3rem;
    width: auto;
    vertical-align: middle;
    font-size: 3rem;
}

@media screen and (max-width: 549px) {
    .contact-card img, .contact-card i.fa {
        font-size: 2rem;
    }
    .contact-cards-container {
        margin: 0;
        width: -webkit-fill-available;
    }
}

@media screen and (max-width: 449px) {
    .contact-card .with-hover-content img {
        display: none !important;
    }
}

span.with-hover-content {
    line-height: 3rem;
    margin-left: auto;
    margin-right: auto;
    margin-top: 0rem;
    height: 3rem;
    margin-bottom: 2rem;
    width: auto;
}

span > *.hover-content {
    display: initial !important;
    max-width: 95%;
    margin-left: initial;
    margin-right: initial;
    margin-top: initial;
    height: initial;
    margin-bottom: initial;
    width: initial;
}

